# insanely-fast-whisper

./: .gitignore  .python-version  convert_output.py  pyproject.toml
src/insanely_fast_whisper/: cli.py
src/insanely_fast_whisper/utils/: diarization_pipeline.py  diarize.py  result.py
